--- a/HackATL/www/templates/home.html
+++ b/HackATL/www/templates/home.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Home Page">
+<ion-view view-title="Home Page" hide-back-button="true">
     <!--<header id="intro" style="opacity: 0.8;height: 990px">-->
     <!--<div class="table">-->
     <!--<div class="header-text">-->
