Ionic app final

--- a/HackATL/www/templates/home.html
+++ b/HackATL/www/templates/home.html
@@ -1,21 +1,14 @@
 <ion-view view-title="Home Page" hide-back-button="true">
-    <!--<header id="intro" style="opacity: 0.8;height: 990px">-->
-    <!--<div class="table">-->
-    <!--<div class="header-text">-->
-    <!--<div class="row">-->
-    <!--<div class="col-md-12 text-center">-->
+
     <ion-content class="padding">
-        <h1> Cognito </h1>
-        <h4>Real-time TBI diagnostics</h4>
-        <a ui-sref="questions">
-            <button class="button button-positive">
-                Diagnose Now
-            </button>
-        </a>
+        <div align="center">
+            <img ng-src="./img/cognito.png">
+        </div>
+        <h1 align="center"> Cognito </h1>
+        <h4 align="center">Real-time TBI diagnostics</h4>
+        <button class="button button-block button-positive" ng-click="redirect()">
+            Diagnose Now
+        </button>
     </ion-content>
-    <!--</div>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--</header>-->
+
 </ion-view>
